feat(write-queue): implement engine-owned queued writes with strict group commit
Add the engine-owned write queue with strict durable group commit, bounded
admission control, timeout and cancellation-before-run semantics, and queue
metrics across the C ABI (v3), Rust engine, and all maintained bindings
(Python, Go, Dart, Node, .NET, Java/JDBC).

Implement queued execution for self-contained SQL statements and batches while
preserving direct-path behavior for explicit transactions and prepared
statements. Queue configuration options include capacity, default timeout,
group-commit mode, max batch size, and collection delay. Add ADR 0162
documenting queue ownership, strict group commit, and binding-scope decisions.

Deliver Phase 1 concurrent-write regression infrastructure: native benchmark
scenarios for queued single-writer and reader-under-writer cases, cross-binding
scenario definition, grouped-commit fault-injection planning, and pre-commit
check keys. Update FUTURE_WINS roadmap to mark concurrent write ergonomics as
COMPLETE and reference ADR 0162.