@@ -15,6 +15,7 @@ import static java.lang.foreign.ValueLayout.JAVA_LONG;
 public final class Smoke {
     private static final int DDB_OK = 0;
     private static final int DDB_ERR_SQL = 5;
+    private static final long DDB_WRITE_QUEUE_TIMEOUT_DEFAULT = -1L;
 
     public static void main(String[] args) throws Throwable {
         Path root = Path.of("").toAbsolutePath();
@@ -33,6 +34,12 @@ public final class Smoke {
             MethodHandle execute = linker.downcallHandle(
                 lookup.find("ddb_db_execute").orElseThrow(),
                 FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, ADDRESS, JAVA_LONG, ADDRESS));
+            MethodHandle executeQueued = linker.downcallHandle(
+                lookup.find("ddb_db_execute_queued").orElseThrow(),
+                FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS, ADDRESS, JAVA_LONG, JAVA_LONG, ADDRESS));
+            MethodHandle queueMetrics = linker.downcallHandle(
+                lookup.find("ddb_db_write_queue_metrics").orElseThrow(),
+                FunctionDescriptor.of(JAVA_INT, ADDRESS, ADDRESS));
             MethodHandle resultFree = linker.downcallHandle(
                 lookup.find("ddb_result_free").orElseThrow(),
                 FunctionDescriptor.of(JAVA_INT, ADDRESS));
@@ -44,13 +51,13 @@ public final class Smoke {
                 FunctionDescriptor.of(JAVA_INT, ADDRESS));
 
             MemorySegment dbSlot = arena.allocate(ADDRESS);
-            check((int) open.invokeExact(arena.allocateUtf8String(":memory:"), dbSlot), "open_or_create", lastError);
+            check((int) open.invokeExact(arena.allocateFrom(":memory:"), dbSlot), "open_or_create", lastError);
             MemorySegment db = dbSlot.get(ADDRESS, 0);
 
             MemorySegment resultSlot = arena.allocate(ADDRESS);
             check((int) execute.invokeExact(
                 db,
-                arena.allocateUtf8String("CREATE TABLE smoke (id INT64 PRIMARY KEY, name TEXT)"),
+                arena.allocateFrom("CREATE TABLE smoke (id INT64 PRIMARY KEY, name TEXT)"),
                 MemorySegment.NULL,
                 0L,
                 resultSlot
@@ -59,16 +66,31 @@ public final class Smoke {
 
             check((int) execute.invokeExact(
                 db,
-                arena.allocateUtf8String("INSERT INTO smoke (id, name) VALUES (1, 'java-smoke')"),
+                arena.allocateFrom("INSERT INTO smoke (id, name) VALUES (1, 'java-smoke')"),
                 MemorySegment.NULL,
                 0L,
                 resultSlot
             ), "insert", lastError);
             check((int) resultFree.invokeExact(resultSlot), "free insert", lastError);
 
+            check((int) executeQueued.invokeExact(
+                db,
+                arena.allocateFrom("INSERT INTO smoke (id, name) VALUES (2, 'java-queued')"),
+                MemorySegment.NULL,
+                0L,
+                DDB_WRITE_QUEUE_TIMEOUT_DEFAULT,
+                resultSlot
+            ), "queued insert", lastError);
+            check((int) resultFree.invokeExact(resultSlot), "free queued insert", lastError);
+            MemorySegment metrics = arena.allocate(120);
+            check((int) queueMetrics.invokeExact(db, metrics), "queue metrics", lastError);
+            if (metrics.get(JAVA_LONG, 16) != 1L || metrics.get(JAVA_LONG, 56) != 1L || metrics.get(JAVA_LONG, 64) != 0L) {
+                throw new IllegalStateException("unexpected queue metrics");
+            }
+
             check((int) execute.invokeExact(
                 db,
-                arena.allocateUtf8String("SELECT id, name FROM smoke"),
+                arena.allocateFrom("SELECT id, name FROM smoke"),
                 MemorySegment.NULL,
                 0L,
                 resultSlot
@@ -76,14 +98,14 @@ public final class Smoke {
             MemorySegment rows = arena.allocate(JAVA_LONG);
             MemorySegment result = resultSlot.get(ADDRESS, 0);
             check((int) rowCount.invokeExact(result, rows), "row count", lastError);
-            if (rows.get(JAVA_LONG, 0) != 1L) {
-                throw new IllegalStateException("expected 1 row");
+            if (rows.get(JAVA_LONG, 0) != 2L) {
+                throw new IllegalStateException("expected 2 rows");
             }
             check((int) resultFree.invokeExact(resultSlot), "free select", lastError);
 
             int status = (int) execute.invokeExact(
                 db,
-                arena.allocateUtf8String("SELECT * FROM nope"),
+                arena.allocateFrom("SELECT * FROM nope"),
                 MemorySegment.NULL,
                 0L,
                 resultSlot
@@ -108,7 +130,7 @@ public final class Smoke {
 
     private static String errorString(MethodHandle lastError) throws Throwable {
         MemorySegment segment = (MemorySegment) lastError.invokeExact();
-        return segment.equals(MemorySegment.NULL) ? "" : segment.reinterpret(Long.MAX_VALUE).getUtf8String(0);
+        return segment.equals(MemorySegment.NULL) ? "" : segment.reinterpret(Long.MAX_VALUE).getString(0);
     }
 
     private static Path locateLibrary(Path root) throws IOException {
